<resources>
    <string name="app_name">UpsaAlert</string>
    <string name="page1">The University of Professional Studies, Accra (UPSA) is a progressive public institution that provides both academic and professional higher education in Ghana.  With over fifty (50) years of experience, UPSA has achieved the reputation as the oldest Ghanaian human resource development institution in professional Accountancy and Management with many of its products in key leadership positions in Ghana and abroad.</string>
    <string name="pag2">UPSA remains the only public institution in Ghana with the mandate to offer both academic degrees and provide tuition for business professional qualifications.  Combination of scholarship with professionalism is the foundation of UPSA’s unique profile. With this background, the University has built systems thereby laying the foundation for a distinctive academic and professional profile somewhat different from the requirements of a purely professional or academic institution. UPSA is fully accredited by the Accreditation Council for Business Schools and Programmes (ACBSP) in USA.</string>
    <string name="pag3">The University of Professional Studies, (UPSA) formerly the Institute of Professional Studies (IPS) was birthed out of a dream of a young man in 1967 as a private business professional institution.  By dint of hard work, the founder, Nana J.K. Opoku Ampomah successfully carved a niche for the Institute as the only tertiary educational institution to train professional accountants and administrators in the whole of West Africa at the time.  The institution has undergone a lot of restructuring over the years through to where it is today.</string>
    <string name="pag4">From a humble beginning as a Private Tutorial College in 1967, the Institution was taken over by government in 1978 by the Institute of Professional Studies Decree, 1979 (SMCD 200).  Subsequently, on 22nd April 1999, the Institute of Professional Studies (IPS) Act, Act 566 was passed to establish the Institute as a tertiary institution with the responsibility of providing tertiary education in the academic disciplines of Accountancy and Management.</string>
    <string name="pag5">With great fortitude and hard work, the Presidential Charter was granted to the Institute in September, 2008 making it a fully-fledged university capable of awarding its own certificates, diplomas and degrees for its accredited programmes.   In 2012, the University of Professional Studies Act 2012, Act 850 was passed to change the name of the Institution from Institute of Professional Studies to University of Professional Studies.</string>
    <string name="pag6">Repositioned as a fully-fledged public university, with its unique mandate to provide academic and professional education, the University is poised towards attaining scholarship, professionalism and entrepreneurship; offering professional, postgraduate, bachelors and diploma programmes.  From an initial enrolment of five students in 1967, the University currently can boast of over 15,000 students.</string>
    <string name="pag7">At a Special Congregation on 26th April, 2018 the President, His Excellency Nana Addo Danquah Akufo Addo unveiled the plaque to rename the University after the Founder of the Institute, Nana Opoku Ampomah. The necessary constitutional and legal processes have been put in motion to effect the name change to Opoku Ampomah University of Professional Studies.</string>
    <string name="Bullet">A Symbol</string>
    <string name="pag8">The Symbol: The Symbol is an adaptation of the Adinkrah symbol ‘Ako Ben.’  The Ako Ben is literally translated as ‘War Horn’, a horn used by the Akan traditional War Chief to call his warriors to war. It represents a state of readiness, vigilance and wariness.</string>
    <string name="pag9">The Symbol, in navy blue colour, signifies the readiness of the University of Professional Studies to promote higher education, by transforming students into graduates who are critical thinkers, confident and wield  authority in their fields of discipline.</string>
    <string name="pag10">The Shield:  The Shield with the Gold colour is a symbol of protection of the wealth or assets of the University, that is: its intellectual property- which is its pride; its Faculty members– who are the drivers of the knowledge and skills development process; its students- who are the reason for its existence and its alumni – who are the evidence of the success of the University.</string>
    <string name="pag11">The Banner/Scroll: The Banner/Scroll has the inscription-Scholarship with Professionalism- which is the motto of the University. The motto is an expression of the academic intent of the University to provide students with the knowledge and skills so that as graduates, they would be able to solve problems for the socio-economic development of Ghana</string>
    <string name="pah12">To be a world class education provider in both academic and professional disciplines,   nationally entrenched, regionally recognized and globally relevant.</string>
    <string name="pag13">Knowledge, a basis for development is relevant when shared and used.</string>
    <string name="pag15">We strive to provide and promote quality higher education and training in management and other related disciplines by leveraging a structured mix of Scholarship with Professionalism in Ghana and beyond.  We believe our first responsibility is to the students, staff, parents, alumni and all other stakeholders. In meeting their needs, everything we do epitomizes scholarship with professionalism.  Scholarship to the university means the Pursuit and acquisition of Knowledge and Professionalism means Application of knowledge for Development in an ethical way. These two are the key driving forces of UPSA\'s existence.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_hhhhhh">hhhhhh</string>
</resources>
